--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-01 Sat 16:12]
+#+CAPTION: Clock summary at [2017-07-01 Sat 16:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *46:27* |       |       | 100.0 |
+| *Total time*                                                                | *46:47* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 46:27   |       |       | 100.0 |
-| Active                                                                      |         | 46:27 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  14.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   1.8 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |   9.5 |
+| Stories                                                                     | 46:47   |       |       | 100.0 |
+| Active                                                                      |         | 46:47 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  14.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   1.7 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |   9.4 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.3 |
-| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  18.6 |
+| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  18.5 |
 | COMPLETED Fix broken builds due to disk space                               |         |       |  1:32 |   3.3 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   5.0 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  23.3 |
+| COMPLETED Remove =is_target= from frontends                                 |         |       |  1:14 |   2.6 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   4.9 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  23.1 |
 | STARTED Move element segmentation into yarn                                 |         |       |  1:32 |   3.3 |
-| STARTED Remove =is_target= from frontends                                   |         |       |  0:54 |   1.9 |
-| STARTED Clean up yarn                                                       |         |       |  8:39 |  18.6 |
+| STARTED Clean up yarn                                                       |         |       |  8:39 |  18.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -276,6 +276,19 @@ terminate called after throwing an instance of 'boost::filesystem::filesystem_er
 
 We need to start removing some files to create some space.
 
+*** COMPLETED Remove =is_target= from frontends                       :story:
+    CLOSED: [2017-07-01 Sat 16:34]
+    CLOCK: [2017-07-01 Sat 16:13]--[2017-07-01 Sat 16:33] =>  0:20
+    CLOCK: [2017-07-01 Sat 15:18]--[2017-07-01 Sat 16:12] =>  0:54
+
+At present we seem to be supplying the =is_target= flag to the
+frontends, but its not clear why that is. Ideally, we should not care
+at this point who the target is. Try removing it and see what happens.
+
+- remove is target from the frontends
+- remove is target from descriptor
+- remove is not yet determined from origin types
+
 *** STARTED Add support for proper JSON serialisation in C++          :story:
     CLOCK: [2017-04-12 Wed 20:56]--[2017-04-12 Wed 23:14] =>  2:18
 
@@ -400,17 +413,6 @@ Notes:
 - so in conclusion, we to move decoration, enablement and dependencies
   into yarn (basically decoration and artefact properties) first and
   then see where segmentation ends.
-
-*** STARTED Remove =is_target= from frontends                         :story:
-    CLOCK: [2017-07-01 Sat 15:18]--[2017-07-01 Sat 16:12] =>  0:54
-
-At present we seem to be supplying the =is_target= flag to the
-frontends, but its not clear why that is. Ideally, we should not care
-at this point who the target is. Try removing it and see what happens.
-
-- remove is target from the frontends
-- remove is target from descriptor
-- remove is not yet determined from origin types
 
 *** STARTED Clean up yarn                                             :story:
     CLOCK: [2017-06-30 Fri 09:10]--[2017-06-30 Fri 13:33] =>  4:23
