--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,19 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 14:50]
+#+CAPTION: Clock summary at [2017-07-07 Fri 15:41]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:07* |      |      | 100.0 |
+| *Total time*                                                                | *8:56* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:07   |      |      | 100.0 |
-| Active                                                                      |        | 8:07 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   9.2 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   4.9 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  14.8 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  51.5 |
-| COMPLETED Implement the pre-processing chain                                |        |      | 1:35 |  19.5 |
+| Stories                                                                     | 8:56   |      |      | 100.0 |
+| Active                                                                      |        | 8:56 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   8.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   4.5 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  13.4 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  46.8 |
+| COMPLETED Implement the pre-processing chain                                |        |      | 1:35 |  17.7 |
+| COMPLETED Refactor mapping repository factory                               |        |      | 0:12 |   2.2 |
+| COMPLETED Implement the output languages transform                          |        |      | 0:37 |   6.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -141,6 +143,25 @@ Tasks:
 At present we are doing a lot of work in the intermediate model
 repository factory that is mapping related. It would make more sense
 to just have the mapping repository factory take on all of that work.
+
+*** COMPLETED Implement the output languages transform                :story:
+    CLOSED: [2017-07-07 Fri 15:41]
+    CLOCK: [2017-07-07 Fri 15:24]--[2017-07-07 Fri 15:41] =>  0:17
+    CLOCK: [2017-07-07 Fri 14:51]--[2017-07-07 Fri 15:11] =>  0:20
+
+Tasks:
+
+- create a transform that expands an intermediate model into a number
+  of models, mapped to languages.
+- update the initial target chain to perform the language expansion to
+  the target.
+
+*** Use forward declaration for context                               :story:
+
+We've implemented a number of transforms using context
+references. Now, when we change context, we end up with a massive
+rebuild. We should be able to change all of the headers to include the
+forward declaration.
 
 *** Implement the references chain                                    :story:
 
