--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,21 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 15:41]
+#+CAPTION: Clock summary at [2017-07-07 Fri 21:19]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:56* |      |      | 100.0 |
+| *Total time*                                                                | *9:16* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:56   |      |      | 100.0 |
-| Active                                                                      |        | 8:56 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   8.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   4.5 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  13.4 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  46.8 |
-| COMPLETED Implement the pre-processing chain                                |        |      | 1:35 |  17.7 |
+| Stories                                                                     | 9:16   |      |      | 100.0 |
+| Active                                                                      |        | 9:16 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   8.1 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   4.3 |
+| COMPLETED Implement the context class                                       |        |      | 1:12 |  12.9 |
+| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  45.1 |
+| COMPLETED Implement the pre-processing chain                                |        |      | 1:35 |  17.1 |
 | COMPLETED Refactor mapping repository factory                               |        |      | 0:12 |   2.2 |
-| COMPLETED Implement the output languages transform                          |        |      | 0:37 |   6.9 |
+| COMPLETED Implement the output languages transform                          |        |      | 0:37 |   6.7 |
+| COMPLETED Use forward declaration for context                               |        |      | 0:20 |   3.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -156,7 +157,9 @@ Tasks:
 - update the initial target chain to perform the language expansion to
   the target.
 
-*** Use forward declaration for context                               :story:
+*** COMPLETED Use forward declaration for context                     :story:
+    CLOSED: [2017-07-07 Fri 21:19]
+    CLOCK: [2017-07-07 Fri 20:59]--[2017-07-07 Fri 21:19] =>  0:20
 
 We've implemented a number of transforms using context
 references. Now, when we change context, we end up with a massive
