--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,27 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-07 Fri 22:03]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:59* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:59   |      |      | 100.0 |
-| Active                                                                      |        | 9:59 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |   7.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:24 |   4.0 |
-| COMPLETED Implement the context class                                       |        |      | 1:12 |  12.0 |
-| COMPLETED Implement the exogenous transformation chain                      |        |      | 4:11 |  41.9 |
-| COMPLETED Implement the pre-processing chain                                |        |      | 1:35 |  15.9 |
-| COMPLETED Refactor mapping repository factory                               |        |      | 0:12 |   2.0 |
-| COMPLETED Implement the output languages transform                          |        |      | 0:37 |   6.2 |
-| COMPLETED Use forward declaration for context                               |        |      | 0:20 |   3.3 |
-| STARTED Implement the references chain                                      |        |      | 0:43 |   7.2 |
+#+CAPTION: Clock summary at [2017-07-08 Sat 17:19]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *12:02* |       |      | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 12:02   |       |      | 100.0 |
+| Active                                                                      |         | 12:02 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   6.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   3.3 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |  10.0 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  34.8 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  13.2 |
+| COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.7 |
+| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   5.1 |
+| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.8 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  22.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-08 Sat 17:16]--[2017-07-08 Sat 17:19] =>  0:03
     CLOCK: [2017-07-07 Fri 11:18]--[2017-07-07 Fri 11:23] =>  0:05
     CLOCK: [2017-07-03 Thu 20:15]--[2017-07-03 Thu 20:55] =>  0:40
 
@@ -167,7 +168,9 @@ references. Now, when we change context, we end up with a massive
 rebuild. We should be able to change all of the headers to include the
 forward declaration.
 
-*** STARTED Implement the references chain                            :story:
+*** COMPLETED Implement the references chain                          :story:
+    CLOSED: [2017-07-08 Sat 17:17]
+    CLOCK: [2017-07-08 Sat 16:06]--[2017-07-08 Sat 17:16] =>  1:10
     CLOCK: [2017-07-08 Sat 15:15]--[2017-07-08 Sat 16:05] =>  0:37
     CLOCK: [2017-07-07 Fri 21:20]--[2017-07-07 Fri 22:03] =>  0:43
 
@@ -186,6 +189,16 @@ Notes:
   gets dropped. We need to supply all of the languages (input and
   output) and if there is a match, we need to keep the reference.
 - handle PSM in model generation chain, for both target and references
+
+*** Implement the model assembly chain                                :story:
+
+Tasks:
+
+- map models;
+- merge models;
+- apply post processing
+- convert models to their final representation.
+- plug it in the model generation chain.
 
 *** Implement the model generation chain                              :story:
 
