--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,26 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-08 Sat 18:25]
+#+CAPTION: Clock summary at [2017-07-08 Sat 18:30]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:06* |       |      | 100.0 |
+| *Total time*                                                                | *13:11* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:06   |       |      | 100.0 |
-| Active                                                                      |         | 13:06 |      | 100.0 |
+| Stories                                                                     | 13:11   |       |      | 100.0 |
+| Active                                                                      |         | 13:11 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   6.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   3.1 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   9.2 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  31.9 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  12.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   3.0 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   9.1 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  31.7 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  12.0 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.5 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   4.7 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.5 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  20.7 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  20.6 |
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   5.1 |
-| STARTED Implement the model assembly chain                                  |         |       | 0:11 |   1.4 |
-| STARTED Implement the model generation chain                                |         |       | 0:13 |   1.7 |
+| COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.6 |
+| STARTED Implement the model assembly chain                                  |         |       | 0:16 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -200,7 +200,18 @@ Notes:
 We need to refactor the existing merger into a one-shot transform that
 takes a list of partial models and returns the merged model.
 
+*** COMPLETED Implement the model generation chain                    :story:
+    CLOSED: [2017-07-08 Sat 18:27]
+    CLOCK: [2017-07-08 Sat 17:31]--[2017-07-08 Sat 17:44] =>  0:13
+
+Tasks:
+
+- implement the output languages expansion, considering
+  multi-threading. If its too hard we should just stick to the
+  single-threaded implementation we have at present.
+
 *** STARTED Implement the model assembly chain                        :story:
+    CLOCK: [2017-07-08 Sat 18:25]--[2017-07-08 Sat 18:30] =>  0:05
     CLOCK: [2017-07-08 Sat 17:20]--[2017-07-08 Sat 17:31] =>  0:11
 
 Tasks:
@@ -210,16 +221,6 @@ Tasks:
 - apply post processing
 - convert models to their final representation.
 - plug it in the model generation chain.
-
-*** STARTED Implement the model generation chain                      :story:
-    CLOCK: [2017-07-08 Sat 17:31]--[2017-07-08 Sat 17:44] =>  0:13
-
-Tasks:
-
-- implement the output languages expansion, considering
-  multi-threading. If its too hard we should just stick to the
-  single-threaded implementation we have at present.
-- implement the intermediate model transform.
 
 *** Implement the post-processing chain                               :story:
 
