--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,26 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-08 Sat 18:30]
+#+CAPTION: Clock summary at [2017-07-08 Sat 19:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:11* |       |      | 100.0 |
+| *Total time*                                                                | *13:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:11   |       |      | 100.0 |
-| Active                                                                      |         | 13:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   6.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   3.0 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   9.1 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  31.7 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  12.0 |
-| COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.5 |
-| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   4.7 |
-| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.5 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  20.6 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   5.1 |
+| Stories                                                                     | 13:51   |       |      | 100.0 |
+| Active                                                                      |         | 13:51 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   5.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.9 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   8.7 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  30.2 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  11.4 |
+| COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.4 |
+| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   4.5 |
+| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.4 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  19.6 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   4.8 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.6 |
-| STARTED Implement the model assembly chain                                  |         |       | 0:16 |   2.0 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:56 |   6.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -210,7 +210,10 @@ Tasks:
   multi-threading. If its too hard we should just stick to the
   single-threaded implementation we have at present.
 
-*** STARTED Implement the model assembly chain                        :story:
+*** COMPLETED Implement the model assembly chain                      :story:
+    CLOSED: [2017-07-08 Sat 18:37]
+    CLOCK: [2017-07-08 Sat 18:38]--[2017-07-08 Sat 19:12] =>  0:34
+    CLOCK: [2017-07-08 Sat 18:31]--[2017-07-08 Sat 18:37] =>  0:06
     CLOCK: [2017-07-08 Sat 18:25]--[2017-07-08 Sat 18:30] =>  0:05
     CLOCK: [2017-07-08 Sat 17:20]--[2017-07-08 Sat 17:31] =>  0:11
 
